--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,python,opencv
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,python,opencv
 
+training/football-players-detection-1
 ### OpenCV ###
 #OpenCV for Mac and Linux
 #build and release folders
